# MultiAgentApp

./: .gitignore  .multi_agent_app_config.json  AGENTS.md  ALPHA_CHECKLIST.md  README.md  SocratesTest.db  USER_GUIDE.md  ledningstest2.db  ledningstest3.db  ledningstest4.db  pyproject.toml  requirements.txt  start_socrates_local.cmd  start_socrates_local.command  start_socrates_local.ps1  stop_socrates_local.cmd  stop_socrates_local.command  stop_socrates_local.ps1
.github/workflows/: tests.yml
docs/: chatgpt_actions_pilot.md
openapi/: memory_api.openapi.json
src/: main.py
src/multi_agent_app/: __init__.py  agents.py  api_server.py  cli.py  config.py  llm.py  memory_core.py  memory_orientation.py  memory_retrieval.py  models.py  orchestrator.py  panel.py  storage.py  tui.py
tests/: __init__.py  conftest.py  test_api_server.py  test_cli.py  test_config.py  test_decision_candidates.py  test_decision_links.py  test_decision_suggestions.py  test_decisions.py  test_llm.py  test_memory_orientation.py  test_memory_retrieval.py  test_openapi_contract.py  test_orchestrator.py  test_panel.py  test_storage.py  test_tui_smoke.py
