[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-app"
version = "0.1.0"
description = "ChatGPT-first memory backend with SQLite, retrieval, orientation, and thin HTTP API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
script-files = ["bin/multi-agent-app"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
